--- a/app.json
+++ b/app.json
@@ -17,7 +17,9 @@
     },
     "assetBundlePatterns": ["**/*"],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.viatrucker.vtm",
+      "buildNumber": "1.0.0"
     },
     "android": {
       "adaptiveIcon": {
